
Minor Breaking Changes

* https://github.com/clj-commons/etaoin/issues/412[#412]: Rename `etaoin.keys/num-.` to `etaoin.keys/num-dot`. +
The symbol `num-.` is technically an invalid Clojure symbol and can confuse tooling. +
A grep.app for `num-.` found Etaoin itself as the only user of this var.
If your code uses `etaoin.keys/num-.`, you'll need to rename it to `etaoin.keys/num-dot`.

* https://github.com/clj-commons/etaoin/issues/430[#430]: Declare the public API.
We made what we think is a good guess at what the public Etaoin API is.
The following namespaces are now considered internal and subject to change:
+
[%autowidth]
|===
| old namespace | new internal namespace

| `etaoin.client`
| `etaoin.impl.client`

| `etaoin.driver`
| `etaoin.impl.driver`

| `etaoin.proc`
| `etaoin.impl.proc`

| `etaoin.util`
| `etaoin.impl.util`

| `etaoin.xpath`
| `etaoin.impl.xpath`

| `etaoin.ide.api`
| `etaoin.ide.impl.api`

| `etaoin.ide.spec`
| `etaoin.ide.impl.spec`

|===
+
The following vars are now considered internal and subject to change:
+
[%autowidth]
|===
| namespace | var

.16+|`etaoin.api`
| `default-locator`
| `dispatch-driver`
| `find-elements*`
| `format-date`
| `get-pwd`
| `join-path`
| `locator-css`
| `locator-xpath`
| `make-url`
| `make-screenshot-file-path`
| `postmortem-handler`
| `process-log`
| `proxy-env`
| `use-locator`
| `with-exception`
| `with-locator`

.8+| `etaoin.dev`
| `build-request`
| `group-requests`
| `log->request`
| `parse-json`
| `parse-method`
| `process-log`
| `request?`
| `try-parse-int`

| `etaoin.ide.flow`
| all except for: `run-ide-script`

| `etaoin.ide.main`
| all except for: `-main`
|===
+
If we got this wrong your code will fail, you will tell us, and we can discuss.

Other Changes

* https://github.com/clj-commons/etaoin/issues/380[#380]: Etaoin is now Babashka compatible!
* https://github.com/clj-commons/etaoin/issues/413[#413]: Etaoin now exports a clj-kondo config to help with the linting of its many handy macros