@@ -14,6 +14,8 @@ The symbol `num-.` is technically an invalid Clojure symbol and can confuse tool
 A grep.app for `num-.` found Etaoin itself as the only user of this var.
 If your code uses `etaoin.keys/num-.`, you'll need to rename it to `etaoin.keys/num-dot`.
 
+* https://github.com/clj-commons/etaoin/issues/471[#471]: `etaoin.api/defaults` keyword `:path` renamed to `:path-driver` to match keyword used in driver options.
+
 * https://github.com/clj-commons/etaoin/issues/430[#430]: Declare the public API.
 We made what we think is a good guess at what the public Etaoin API is.
 The following namespaces are now considered internal and subject to change:
